# urirun-connector-router

./: .gitignore  CHANGELOG.md  Makefile  README.md  connector.manifest.json  goal.yaml  local.dev.txt  pyproject.toml
.github/workflows/: ci.yml  integration-urirun-llm.yml
scripts/: ci_urirun_llm_smoke.py
tests/: test_contract.py  test_router.py  test_routing.py  test_single_source.py  test_target_resolution.py
urirun_connector_router/: __init__.py  check_single_source.py  contracts.json  core.py  routing.py  target_resolution.py
